--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "kasir api",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node ./src/server.js",
     "sequelize": "sequelize",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
