--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql2": "^3.14.0",
+    "ramda": "^0.30.1",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
