--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Faqih",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql2": "^3.14.0",
