--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "node ./src/server.js",
     "sequelize": "sequelize",
     "test": "jest --runInBand --detectOpenHandles",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:update": "jest --updateSnapshot",
+    "test:coverage:json": "npx jest --coverage --outputFile=jest-report.json",
+    "test:coverage:html": "npx jest --coverage --outputFile=jest-report.html",
+    "test:coverage": "jest --coverage"
   },
   "author": "Faqih",
   "license": "ISC",
@@ -21,8 +25,8 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "jest-serializer": "^27.5.1",
     "sequelize-cli": "^6.6.2",
-    "sequelize-mock": "^0.10.2",
     "supertest": "^7.1.0"
   }
 }
