--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^9.6.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "ramda": "^0.30.1",
     "sequelize": "^6.37.7"
