--- a/src/docs/swagger/product.yaml
+++ b/src/docs/swagger/product.yaml
@@ -28,15 +28,63 @@ paths:
         - Products
       security:
         - BearerAuth: []
+      parameters:
+        - name: page
+          in: query
+          description: Halaman yang ingin diambil
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: limit
+          in: query
+          description: Jumlah item per halaman
+          required: false
+          schema:
+            type: integer
+            default: 10
+        - name: search
+          in: query
+          description: Kata kunci untuk pencarian produk
+          required: false
+          schema:
+            type: string
+        - name: sortBy
+          in: query
+          description: Kolom untuk sorting (misalnya "price" atau "name")
+          required: false
+          schema:
+            type: string
+            enum: [price, name, created_at]
+        - name: sortOrder
+          in: query
+          description: Urutan sorting (ascending atau descending)
+          required: false
+          schema:
+            type: string
+            enum: [asc, desc]
+            default: asc
       responses:
         "200":
           description: Berhasil mendapatkan daftar produk
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Product"
+                type: object
+                properties:
+                  page:
+                    type: integer
+                    example: 1
+                  totalItems:
+                    type: integer
+                    example: 20207
+                  totalPages:
+                    type: integer
+                    example: 2021
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Product"
         "401":
           description: Unauthorized
 
@@ -61,3 +109,29 @@ components:
         stock:
           type: integer
           example: 10
+        created_by:
+          type: integer
+          example: 1
+        created_at:
+          type: string
+          format: date-time
+          example: "2025-03-31T14:35:55.000Z"
+        updated_at:
+          type: string
+          format: date-time
+          example: "2025-03-31T14:35:55.000Z"
+        creator:
+          type: object
+          properties:
+            id:
+              type: integer
+              example: 1
+            fullname:
+              type: string
+              example: "Faqih Arifin"
+            username:
+              type: string
+              example: "faqih"
+            role:
+              type: string
+              example: "admin"
