--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
+    "openai": "^4.97.0",
     "ramda": "^0.30.1",
     "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
