--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/server.js",
+    "bot:wa": "node ./src/bot/whatsapp.js",
     "build": "set NODE_ENV=production && node src/server.js",
     "sequelize": "sequelize",
     "test": "jest --runInBand --detectOpenHandles",
@@ -24,10 +25,12 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "openai": "^4.97.0",
+    "qrcode-terminal": "^0.12.0",
     "ramda": "^0.30.1",
     "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "whatsapp-web.js": "^1.27.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
